--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ p.grey {
 
 .scrollup:hover {
     opacity:.9;
+    transform: scale(1.2);
 }
 
 .bg-lightblue {
@@ -85,6 +86,11 @@ header {
 .header-btn {
     width: 150px;
     margin: 20px 0;
+}
+
+.navbar-brand img {
+    -webkit-animation: pulsing 3s infinite;
+	animation: pulsing 3s infinite;
 }
 
 /* Main */
@@ -268,6 +274,8 @@ header {
 
 .footer-logo img {
     width: 60px;
+    -webkit-animation: pulsing 3s infinite;
+	animation: pulsing 3s infinite;
 }
 
 .footer-icons-1 {
@@ -298,4 +306,35 @@ header {
 
 .footer-element-1 a:hover {
     color: #00ccff;
+}
+
+/* Always Pulse  class="header-bottom" Copyright (c) 2018 Vladimir Ursu www.vlad-ursu.com*/
+@-webkit-keyframes pulsing {
+	0% {
+	-webkit-transform: scale(0.8, 0.8);
+	transform: scale(0.8, 0.8)
+	}
+	50% {
+	-webkit-transform: scale(1.0, 1.0);
+	transform: scale(1.0, 1.0);
+	}
+	100% {
+	-webkit-transform: scale(0.8, 0.8);
+	transform: scale(0.8, 0.8);
+	}
+}
+
+@keyframes pulsing {
+	0% {
+	-webkit-transform: scale(0.8, 0.8);
+	transform: scale(0.8, 0.8)
+	}
+	50% {
+	-webkit-transform: scale(1.0, 1.0);
+	transform: scale(1.0, 1.0);
+	}
+	100% {
+	-webkit-transform: scale(0.8, 0.8);
+	transform: scale(0.8, 0.8);
+	}
 }
